# ODE-and-Basic_PDE-Visualizer

./: README.md  pyproject.toml  requirements.txt  startup_lines
ode_pde_visualizer/: requirements.txt
ode_pde_visualizer/configs/: default.toml
ode_pde_visualizer/docs/: adding_new_systems.md
ode_pde_visualizer/scripts/: run_desktop.py
scripts/: run_desktop.py  run_infinite_axes.py
src/ode_pde_visualizer/: TREE.txt  __init__.py
src/ode_pde_visualizer/app/: controller.dynamic_dimensions.py  controller.py  expression_controller.dynamic_dimensions.py  expression_controller.py
src/ode_pde_visualizer/configs/: color_maps.toml
src/ode_pde_visualizer/core/: graph_settings.py  grids.py  parameters.py  projection.dynamic_dimensions.py  projection.py  time_series.py  trajectory.py  view_state.py
src/ode_pde_visualizer/docs/: color_guidelines.md  projection_rules.md
src/ode_pde_visualizer/interaction/: wheel_binding.py
src/ode_pde_visualizer/math_tools/: expression_parser.dynamic_dimensions.py  expression_parser.py
src/ode_pde_visualizer/presets/: __init__.py  expression_presets.py  ode_presets.py  pde_presets.py  surface_presets.py
src/ode_pde_visualizer/rendering/: color_policy.py  infinite_axes_renderer.py  pyvista_renderer.py  pyvista_renderer.with_qt.py
src/ode_pde_visualizer/scripts/: generate_demo_data.py  run_desktop.py  run_desktop_qt.py  run_web.py
src/ode_pde_visualizer/solvers/: __init__.py  explicit_time_stepper.py  ode_solver.py  pde_runner.py
src/ode_pde_visualizer/tests/: test_expression_parser.py  test_ode_solvers.py  (+1 more)
(+21 files in other folders)
